--- a/composer.json
+++ b/composer.json
@@ -1,31 +1,22 @@
 {
-	"name": "kostealupu/tbc-bank"
-	,"version": "1.4.7"
-	,"description": "maib integration with Magento 2"
+	"name": "kostealupu/maibmagento"
+	,"version": "1.0.0"
+	,"description": "integration with Magento 2"
 	,"type": "magento2-module"
-	,"homepage": "mailto:ecom@maib.md"
+	,"require": {"kostealupu/core": ">=1.0.0"}
 	,"license": "MIT"
-	,"authors": [{
-		"name": "maib",
-		"email": "ecom@maib.md",
-		"homepage": "maib.md",
-		"role": "Developer"
-	}]
-	,"require": {"kostealupu/core": ">=7.8.9"}
 	,"autoload": {"files": ["registration.php"], "psr-4": {"Dfe\\TBCBank\\": ""}}
 	,"keywords": [
 		"API"
 		,"Bank card"
 		,"Credit card"
 		,"eCommerce"		
-		,"Magento"
 		,"Magento 2"
 		,"Magento extension"
 		,"Payment"
 		,"Payment authorization"
 		,"Payment integration"
 		,"Payment gateway"
-		,"maib"
 		,"модуль"
 		,"модуль для Magento 2"
 		,"модуль оплаты"
