--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,11 @@
 	,"require": {"kostealupu/baza": ">=1.0.0"}
 	,"license": "MIT"
 	,"autoload": {"files": ["registration.php"], "psr-4": {"Dfe\\TBCBank\\": ""}}
+	,"config": {
+    "github-oauth": {
+        "github.com": "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"
+    }
+}
 	,"keywords": [
 		"API"
 		,"Bank card"
